--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.4
-  get: ^4.6.1
+  get: ^4.6.3
   logger: ^1.1.0
   firebase_core: ^1.16.0
   firebase_crashlytics: ^2.7.2
@@ -32,7 +32,7 @@ dependencies:
   settings_ui: ^2.0.2
   flutter_native_splash: ^2.1.6
   oauth1: ^2.0.0
-  url_launcher: ^6.1.0
+  url_launcher: ^6.1.2
   cool_alert: ^1.1.0
   package_info_plus: ^1.4.2
   awesome_notifications: ^0.6.21
@@ -40,15 +40,15 @@ dependencies:
   home_widget:
     git:
       url: https://github.com/josepedromonteiro/home_widget.git
-  shared_preferences: ^2.0.13
-  supabase_flutter: ^0.3.0
+  shared_preferences: ^2.0.15
+  supabase_flutter: ^0.3.1
   flutter_tts: ^3.3.3
   web_socket_channel: ^2.2.0
   auto_size_text: ^3.0.0
   flutter_secure_storage: ^5.0.2
   dart_twitter_api: ^0.5.6+1
   latlong2: ^0.8.1
-  syncfusion_flutter_maps: ^20.1.52
+  syncfusion_flutter_maps: ^20.1.55
   hive: ^2.1.0
   hive_flutter: ^1.1.0
   device_preview: ^1.0.0
@@ -57,14 +57,14 @@ dependencies:
   flutter_markdown: ^0.6.10
   device_info_plus: ^3.2.3
   share_plus: ^4.0.4
-  path_provider: ^2.0.9
+  path_provider: ^2.0.10
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   import_path_converter: ^1.0.1
-  pedantic_mono: ^1.18.0
+  pedantic_mono: ^1.19.0+1
   flutter_launcher_icons: ^0.9.2
   flutter_flavorizr: ^2.1.3
   hive_generator: ^1.1.2
